--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+body {
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-group > input[type="text"] {
+    display: inline-block;
+    margin-top: 0.4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+    padding: 0.8rem 1rem 0.7rem;
+    border: 0.2rem solid #4d4d4d;
+    cursor: pointer;
+    text-transform: capitalize;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn.toggle-btn {
+    border-width: 1px;
+    border-color: #d3d3d3;
 }
 
-.App-link {
-  color: #61dafb;
+.btn.toggle-btn[aria-pressed="true"] {
+    text-decoration: underline;
+    border-color: #4d4d4d;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn__danger {
+    color: #fff;
+    background-color: #ca3c3c;
+    border-color: #bd2130;
+}
+
+.btn__filter {
+    border-color: lightgrey;
+}
+
+.btn__primary {
+    color: #fff;
+    background-color: #000;
+}
+
+.btn-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-group > * {
+    flex: 1 1 49%;
+}
+
+.btn-group > * + * {
+    margin-left: 0.8rem;
+}
+
+.label-wrapper {
+    margin: 0;
+    flex: 0 0 100%;
+    text-align: center;
+}
+
+.visually-hidden {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap;
+}
+
+[class*="stack"] > * {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.stack-small > * + * {
+    margin-top: 1.25rem;
+}
+
+.stack-large > * + * {
+    margin-top: 2.5rem;
+}
+
+form {
+    margin: 0 auto;
+}
+
+.input__lg {
+    border: 3px solid #000;
+    border-radius: 5px;
+    width: 800px;
+    height: 30px;
+    font-size: 22px;
+}
+
+.btn__primary {
+    margin: 10px;
 }
