--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 3px;
+}
+
 body {
     max-width: 1440px;
     margin: 0 auto;
@@ -49,9 +55,6 @@ body {
     flex: 1 1 49%;
 }
 
-.btn-group > * + * {
-    margin-left: 0.8rem;
-}
 
 .label-wrapper {
     margin: 0;
@@ -67,19 +70,6 @@ body {
     clip: rect(1px 1px 1px 1px);
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
-}
-
-[class*="stack"] > * {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.stack-small > * + * {
-    margin-top: 1.25rem;
-}
-
-.stack-large > * + * {
-    margin-top: 2.5rem;
 }
 
 form {
